appId: org.gitnotes.app
name: Android Smoke - App Launch + Navigation
tags:
  - smoke
  - android
---

- launchApp:
    clearState: false

- runFlow:
    file: ./onboarding.yaml

- waitForAnimationToEnd

- assertVisible:
    id: "tab-bar.tab.press-HomeTab"

- tapOn:
    id: "tab-bar.tab.press-NotesTab"

- assertVisible:
    id: "notes-list.search-bar.search"

- tapOn:
    id: "tab-bar.tab.press-TodosTab"

- assertVisible:
    id: "todo-list.icon-button.add"

- tapOn:
    id: "tab-bar.tab.press-ExploreTab"

- tapOn:
    id: "tab-bar.tab.press-SettingsTab"

- assertVisible:
    text: "Settings"

- tapOn:
    id: "tab-bar.tab.press-HomeTab"

- assertVisible:
    id: home.button.create-note
