appId: com.xaventra.gitnotes
name: iOS - Scheduled Learning Flow
tags:
  - full
  - ios
  - scheduled-learning
---

- launchApp:
    clearState: false

- tapOn:
    id: tab-bar.tab.press-SettingsTab

- scrollUntilVisible:
    element:
      id: scheduled-learning.button.add
    direction: DOWN

- assertVisible:
    id: scheduled-learning.button.add

- tapOn:
    id: scheduled-learning.button.add

- waitForAnimationToEnd:
    timeout: 1000

- assertVisible:
    text: New Learning Schedule

- tapOn:
    id: tab-bar.tab.press-HomeTab

- waitForAnimationToEnd:
    timeout: 1000

- assertVisible:
    id: home.button.create-note